--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -1,3 +1,7 @@
+espend_router_routes:
+    resource: "@espendRouterRoutesBundle/Resources/config/routing.yml"
+    prefix:   /
+
 espendTranslationDomainBundle:
     resource: "@espendTranslationDomainBundle/Resources/config/routing.yml"
     prefix:   /
