--- a/src/espend/Doctrine/RelationBundle/Resources/config/doctrine/Relation.orm.yml
+++ b/src/espend/Doctrine/RelationBundle/Resources/config/doctrine/Relation.orm.yml
@@ -14,6 +14,11 @@ espend\Doctrine\RelationBundle\Entity\Relation:
     manyToOne:
         many_to_one:
             targetEntity: espend\Doctrine\RelationBundle\Entity\ForeignEntity
+
+        # TODO same namespace
+        many_to_one:
+            targetEntity: ForeignEntity
+
     manyToMany:
         many_to_many:
             targetEntity: espend\Doctrine\RelationBundle\Entity\ForeignEntity
