--- a/src/espend/Doctrine/RelationBundle/Resources/config/doctrine/ForeignEntity.orm.yml
+++ b/src/espend/Doctrine/RelationBundle/Resources/config/doctrine/ForeignEntity.orm.yml
@@ -10,4 +10,5 @@ espend\Doctrine\RelationBundle\Entity\ForeignEntity:
     fields:
         field_1:
             type: integer
+            column: dfdfdsf
     lifecycleCallbacks: {  }
